--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        java: [1.7, 1.8, 11, 12, 13, 14]
+        java: [1.7, 1.8, 11, 12, 13, 14, 15]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK ${{matrix.java}}
